--- a/styles/settings/_index.scss
+++ b/styles/settings/_index.scss
@@ -5,7 +5,7 @@
 /// Added into all of the SCSS file that included setting file
 // --- !!!!!!!!!! ---
 
-
+// styles/settings/_index.scss
 @forward 'borders';
 @forward 'breakpoints';
 @forward 'colors';
