--- a/styles/base/_index.scss
+++ b/styles/base/_index.scss
@@ -1,5 +1,5 @@
-@use './typography';
-@use './elements';
-@use './forms';
-@use './buttons';
-@use './wizard-buttons';
+@forward 'buttons';
+@forward 'elements';
+@forward 'forms';
+@forward 'typography';
+@forward 'wizard-buttons';
