--- a/styles/forms/_input.scss
+++ b/styles/forms/_input.scss
@@ -1,3 +1,8 @@
+@use '../settings/colors' as *;
+@use '../settings/mixins' as *;
+@use '../settings/fonts' as *;
+@use '../settings/spacings' as *;
+
 @use '../settings' as *;
 @use '../base/forms' as *;
 
@@ -234,3 +239,4 @@ textarea {
     color: $color-feedback-red;
   }
 }
+
