--- a/styles/forms/_labels.scss
+++ b/styles/forms/_labels.scss
@@ -1,3 +1,8 @@
+@use '../settings/colors' as *;
+@use '../settings/fonts' as *;
+@use '../settings/spacings' as *;
+@use '../settings/tokens' as *;
+
 // Base label styling including fieldsets and legends used as labels
 main .form label,
 main .form legend.field-label,
@@ -38,3 +43,4 @@ main .form form .field-invalid .field-description {
   color: var(--form-error-color);
   font-weight: 700;
 }
+
