--- a/styles/forms/_radio.scss
+++ b/styles/forms/_radio.scss
@@ -1,3 +1,7 @@
+@use '../settings/colors' as *;
+@use '../settings/spacings' as *;
+@use '../settings/mixins' as *;
+
 @use '../settings' as *;
 @use '../base/forms' as *;
 
@@ -66,3 +70,4 @@
     }
   }
 }
+
