--- a/styles/forms/_select.scss
+++ b/styles/forms/_select.scss
@@ -1,3 +1,7 @@
+@use '../settings/colors' as *;
+@use '../settings/spacings' as *;
+@use '../settings/mixins' as *;
+
 @use '../settings' as *;
 @use '../base/forms' as *;
 
@@ -67,3 +71,4 @@
     }
   }
 }
+
