--- a/blocks/form/components/search-box/search-box.css
+++ b/blocks/form/components/search-box/search-box.css
@@ -52,6 +52,16 @@
     background-color: #e6f2fa;
 }
 
+.selected-cards-heading {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+    color: #333;
+}
+
+.selected-cards-wrapper {
+    margin-top: 1rem;
+}
+
 .selected-cards {
     display: flex;
     flex-wrap: wrap;
