--- a/blocks/form/components/workexperience/workexperience.scss
+++ b/blocks/form/components/workexperience/workexperience.scss
@@ -4,6 +4,11 @@ main .form form .panel-repeatable-panel__workexperience {
     .repeatable-entry {
         &__title {
             @include font-body-large;
+            font-weight: $font-weight-bold;
+        }
+
+        &__workperiod {
+            color: $color-grey-black-60;
         }
     }
 }
