--- a/blocks/form/components/workexperience/workexperience.scss
+++ b/blocks/form/components/workexperience/workexperience.scss
@@ -9,6 +9,7 @@ main .form form .panel-repeatable-panel__workexperience {
 
         &__workperiod {
             color: $color-grey-black-60;
+            margin-top: $spacing-200;
         }
     }
 }
