feat(form) code refactoring

--- a/blocks/form/components/typeahead/typeahead.scss
+++ b/blocks/form/components/typeahead/typeahead.scss
@@ -2,6 +2,10 @@
 
 .typeahead {
   position: relative;
+  
+  select{
+      display: none;
+  }
 
   /*&::after {
     content: url('../../../../icons/search.svg');
