--- a/blocks/form/components/search-box/search-box.scss
+++ b/blocks/form/components/search-box/search-box.scss
@@ -70,6 +70,10 @@
   flex-wrap: wrap;
   gap: 9px;
   margin-bottom: 32px;
+
+  &:empty::after {
+    content: attr(data-empty-selection-message);
+  }
 }
 
 .selected-card {
