--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -73,7 +73,7 @@ main .form form .panel-repeatable-panel {
         right: $spacing-400;
         width: 56px;
         height: 26px;
-        background-image: url('./images/edit-icon.png');
+        background-image: url('./images/icon-repeatable-panel-edit-blue.svg');
         background-repeat: no-repeat;
         display: block;
         text-align: center;
@@ -116,7 +116,7 @@ main .form form .panel-repeatable-panel {
         display: inline-block;
         width: 16px;
         height: 16px;
-        background-image: url('./images/add-icon.png');
+        background-image: url('./images/icon-repeatable-panel-plus-blue.svg');
         background-size: contain;
         background-repeat: no-repeat;
         margin-right: 8px;
