--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,9 +19,8 @@
   IE .button--is-hidden, .button--primary-is-visible
 */
 
-// TODO: can Block styles moved here too? Will it work in AEM? 🤷🏾
-// Settings contain variables, helpers, utilities that can be used by other files. colour, typography, mixin, etc.
 @use './settings' as *;
+@use './bootstrap';
 @use './base';
 @use './forms';
 // Components
@@ -44,7 +43,7 @@
 main {
   display: flex;
   flex-direction: column;
-  justify-content: center;   // vertically center content
+  justify-content: center; // vertically center content
   min-height: calc(100vh - 160px); // adjust to subtract header + footer height
   padding: 0 1rem 9rem 1rem;
   background-color: $bg-light-secondary;
