Styles: Wizard dark/light background

--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -146,3 +146,25 @@ $stroke-hover-stroke: 2px;
 $bg-light-primary: $color-white;
 $bg-light-secondary: $color-shade-blue-04;
 
+// Wizard background colours
+$color-gradient-wizard-dark: linear-gradient(
+                135deg,
+                $color-primary 25%,
+                $color-primary-navy 100%
+);
+
+$color-gradient-wizard-light: linear-gradient(
+                135deg,
+                $color-shade-blue-10 25%,
+                $color-shade-blue-25 100%
+);
+
+// Semantic tokens
+$bg-wizard-dark: $color-gradient-wizard-dark;
+$bg-wizard-light: $color-gradient-wizard-light;
+
+
+$bg-wizard-dark: linear-gradient(135deg, $color-primary 25%, $color-primary-navy 100%);
+$bg-wizard-light: linear-gradient(135deg, $color-shade-blue-10 25%, $color-shade-blue-25 100%);
+
+
