--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -83,7 +83,7 @@
     label {
       padding: 16px;
       border-radius: $border-radius-mid;
-      border: 2px solid $stroke-secondary;
+      border: 2px solid $color-shade-navy-45;
       width: 100%;
       margin: 0;
       margin-bottom: 8px;
