--- a/styles/base/_buttons.scss
+++ b/styles/base/_buttons.scss
@@ -3,6 +3,8 @@
 @use '../settings/borders' as *;
 @use '../settings/elevations' as *;
 @use '../settings/utils' as *;
+@use '../settings' as *;
+
 
 
 // buttons.scss
