--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -1,179 +1,50 @@
-@use '../settings/breakpoints' as *;
-@use '../settings/elevations' as *;
-@use '../settings/colors' as *;
-@use '../settings/spacings' as *;
-@use '../settings/utils' as *;
-@use '../settings/borders' as *;
-@use '../base/typography' as *;
-
+@use 'colors' as *;
+@use 'spacings' as *;
+@use 'fonts' as *;
+// Add other settings files here if needed
 
 /******************************
-      Contextual Help Mixins
+   Input Base
 *******************************/
-@mixin panel-help-base($bg-color, $text-color, $link-color) {
-  background-color: $bg-color;
-  color: $text-color;
-
-  .panel-formcontextualhelp__title {
-    color: $text-color;
-  }
-
-  .plain-text-wrapper,
-  .plain-text-wrapper p {
-    color: $text-color;
-  }
-
-  .panel-formcontextualhelp__footer__link-text {
-    color: $link-color;
-
-    &:hover,
-    &:focus {
-      text-decoration: underline;
-    }
-  }
-}
-
-@mixin panel-help-icon-invert {
-  .panel-formcontextualhelp__icon {
-    filter: brightness(0) invert(1);
-  }
-}
-
-/******************************
-   Button Placeholder Styles
-*******************************/
-%button {
-  @include elevation-2;
-  border-radius: $border-radius-round;
-  text-decoration: none;
-  text-align: center;
-  position: relative;
+%input-base {
+  border-radius: $border-radius-mid;
+  border: $stroke-input-stroke solid $stroke-tertiary;
+  padding: $spacing-400;
+  background: $bg-light-primary;
+  font-family: $font-family;
   font-size: 20px;
-  padding: $spacing-400 $spacing-600;
-  font-style: normal;
-  transition: all 0.2s ease-in-out;
+  line-height: 120%;
+  caret-color: $color-primary;
+  color: $text-primary;
 
-  &:focus {
-    box-shadow: 0 0 0 2px $color-white;
-    outline: 3px solid transparent;
+  &::placeholder {
+    color: $text-secondary;
   }
 
-  &.small {
-    padding: $spacing-300 $spacing-500;
-    font-size: 16px;
-  }
-
-  &.primary {
-    @extend %button--primary;
-  }
-
-  &.hollow,
-  &.secondary {
-    @extend %button--hollow;
-  }
-}
-
-%button--primary {
-  @extend %state-focus;
-  background-image: $color-primary-animated;
-  border: 2px solid $stroke-accent;
-  color: $color-white;
-  z-index: 1;
-
-  &::after {
-    transition: opacity 0.2s ease-in-out;
-    border-radius: $border-radius-round;
-    position: absolute;
-    content: '';
-    display: block;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: $color-gradient-blue;
-    z-index: -1;
-    opacity: 0;
-  }
-
-  &:visited:hover {
-    color: $color-white;
-  }
-
+  &:focus-visible,
+  &:focus,
+  &:active,
   &:hover {
-    color: $color-white;
+    border-color: $stroke-accent;
+    background: $color-shade-blue-10;
+    outline: none;
+  }
 
-    &::after {
-      opacity: 1;
+  &:disabled {
+    border-color: $color-grey-black-20;
+    background: $color-grey-black-05;
+    color: $text-secondary;
+    cursor: not-allowed;
+
+    &::placeholder {
+      color: $text-secondary;
     }
   }
-
-  &:active {
-    background: $color-primary-navy;
-    color: $color-white;
-  }
-
-  &:focus {
-    border-radius: $border-radius-round;
-  }
-}
-
-%button--hollow {
-  @extend %state-focus;
-  background: none;
-  color: $color-primary-dark-navy;
-  border: 2px solid $stroke-secondary;
-
-  &::after {
-    content: '';
-    display: none;
-  }
-
-  &:hover,
-  &:active {
-    color: $color-primary-dark-navy;
-    background: none;
-  }
-
-  &:hover {
-    border-color: $stroke-primary;
-  }
-
-  &:active {
-    border-color: $stroke-accent;
-  }
-
-  &:focus {
-    border-radius: $border-radius-round;
-  }
 }
 
 /******************************
-   Common Utilities
+   Error Input State
 *******************************/
-%common-panel-spacing {
-  margin: 32px 0;
-
-  @include media('desktop') {
-    padding: 60px 0;
-  }
-}
-
-%common-wizard-button {
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  display: block;
-  width: 20px;
-  height: 20px;
-}
-
-/******************************
-   Hide Wizard Menu
-*******************************/
-.wizard-menu-items {
-  display: none !important;
-}
-
 @mixin input-error {
   border: $stroke-input-stroke solid $color-feedback-red;
   background: $bg-light-primary;
@@ -184,9 +55,52 @@
   }
 }
 
-%input-base {
+/******************************
+   Button Placeholders
+*******************************/
+%button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
   border-radius: $border-radius-mid;
-  border: $stroke-input-stroke solid $stroke-tertiary;
-  ...
+  font-size: 16px;
+  padding: $spacing-300 $spacing-500;
+  cursor: pointer;
+  font-weight: 600;
+  font-family: $font-family;
 }
 
+%button--primary {
+  @extend %button;
+  background-color: $color-accent;
+  color: $color-white;
+
+  &:hover,
+  &:focus {
+    background-color: darken($color-accent, 10%);
+  }
+
+  &:disabled {
+    background-color: $color-grey-black-20;
+    cursor: not-allowed;
+  }
+}
+
+%button--hollow {
+  @extend %button;
+  background-color: transparent;
+  border: 2px solid $color-accent;
+  color: $color-accent;
+
+  &:hover,
+  &:focus {
+    background-color: rgba($color-accent, 0.1);
+  }
+
+  &:disabled {
+    border-color: $color-grey-black-20;
+    color: $color-grey-black-20;
+    cursor: not-allowed;
+  }
+}
