--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -23,7 +23,7 @@ h6 {
 h1,
 h2,
 h3 {
-  background: $color-gradient-blue;
+  /*background: $color-gradient-blue;*/
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
