Styling: background update links

--- a/blocks/form/components/wizard/background.scss
+++ b/blocks/form/components/wizard/background.scss
@@ -1,5 +1,5 @@
-@use '../../styles/settings/colors' as *;
-@use '../../styles/settings' as *;
+@use '../../../../styles/settings' as *;
+@use '../../../../styles/settings/colors' as *;
 
 main.wizard--bg-dark {
   background: var(--Gradient-Blue, linear-gradient(135deg, var(--Brand-MSD-Blue, #017AC9) 25%, var(--Brand-MSD-Navy, #134276) 100%));
@@ -28,4 +28,23 @@ main.wizard--bg-dark {
 main.wizard--bg-light {
   background: linear-gradient(135deg, var(--Shades-Blues-Blue-10, #E6F2FA) 25%, var(--Shades-Blues-Blue-25, #BFDEF1) 100%);
   color: var(--Text-Dark, #333);
+}
+
+main.wizard--bg-dark {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p,
+  .subtitle {
+    color: $color-white;
+
+    // Optional: remove gradient effect on h1–h3 in dark mode
+    background: none;
+    -webkit-text-fill-color: $color-white;
+    background-clip: unset;
+    -webkit-background-clip: unset;
+  }
 }
